# galilei-web-services

./: .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.sqlx/: query-0844a67fe3a5eb4b76a212df55c5bfc0845ee8ef6624b6f8ca65402e0bc44a12.json  query-0932b89658ee1d5609fb4ad9d6fe12dba02deab7b52485fbad5038ba07a1d81a.json  query-09331967f53e521a0a450fa3316fb67c82b0589fb35a375b74b98f584ee7dedb.json  query-0944d8fa4b7807f1569495f5af50d18bdffecbdd28b3b073895bd55b2c407a35.json  query-0f9f48cb6f9168e6519ae98538f9f24924fe54115c045a1527e21a7f31c89a66.json  query-10b8b96f8cf764b071988e3e5e190c7b59b4095eea3924a07ee763ba5aad72a2.json  query-1a595e50abec50b03b23395afcd96324f3ee870b8fef8cbc732c6ef8eaebf055.json  query-1ae7fbeb65fd1727909f67d845d417fe830a06ffa1affeb648684a9eca17f393.json  query-2bae51798b9520b9810a19fe71b625b0b1683c00a9fe939637bd0502c06a468c.json  query-2bd83dcba999094019f4c44ba3b5d078607cfd46d7e516949972c2407b4a23e2.json  query-313dd947f76ccaa3eb909869744839ad64eb75cf502b2be1e3879b3209f9c48e.json  query-3c8271bf61fefa67696d73fb72dce37ab06d4866cfc4e7b83830b606704ddc83.json  (+16 more)
api/: Cargo.toml  openapi.json
api/migrations/: 0001_init.sql  init.sql
api/src/: database.rs  error.rs  k8s.rs  lib.rs  main.rs  openapi.rs  prelude.rs
api/src/auth/: middleware.rs  mod.rs  password.rs  token.rs
api/src/database/: error.rs  mod.rs
api/src/endpoints/: galaxy.rs  mod.rs  planet.rs  star.rs
api/src/k8s/: galaxy.rs  mod.rs  planet.rs  star.rs
api/src/models/: galaxy.rs  mod.rs  planet.rs  session.rs  star.rs  user.rs
api/src/routes/: auth.rs  galaxy.rs  mod.rs  planet.rs  star.rs  user.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: error.rs  extractor.rs  lazy.rs  lib.rs  middleware.rs  slot.rs
k8s/: cluster-selfsigned-issuer.yaml  http-to-https-middleware.yaml  (+1 more)
(+66 files in other folders)
