[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
sqlx = "0.7.4"
log = "0.4.21"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
derive_more = "0.99.17"
